# easy_apps

./: CMakeLists.txt  README.md  privacy.html
app/: CMakeLists.txt
app/EasyColor/: CMakeLists.txt  EasyColor.rc  colorbox.cpp  colorbox.h  colorwidget.cpp  colorwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
cmake/: Dependencies.cmake
lib/easywidget/: scrollarea.cpp  scrollarea.h
lib/flowlayout/: flowlayout.h
lib/qtcpp/: common.cpp  common.h
resources/: easy_apps.qrc
resources/qss/: common.qss
